<resources>
    <string name="app_name">약드림</string>
    <string name="chatbot_open">상담봇 열기</string>
    <string name="chatbot_close">상담봇 닫기</string>
    <string name="desc_calendar">달력</string>
    <string name="desc_favorite">즐겨찾기</string>
    <string name="desc_banner_heart">배너 하트</string>
    <string name="banner_message">오늘의 건강이 내일을 지킨다</string>
    <string name="prev_date">이전 날짜</string>
    <string name="today">오늘</string>
    <string name="next_date">다음 날짜</string>
    <string name="morning">아침</string>
    <string name="lunch">점심</string>
    <string name="dinner">저녁</string>
    <string name="empty_medicine">등록된 약이 없습니다.</string>
    <string name="add_medicine">+</string>
</resources>